[metadata]
name = zaiwen
version = attr: zaiwen.version.VERSION
description = Python client library for the Zaiwen API
long_description = file: README.md
long_description_content_type = text/markdown
author = zaiwen
author_email = wangqmshf@hotmail.com
url = https://github.com/wangqmshf/zaiwen
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
  requests >= 2.20  # to get the patch for CVE-2018-18074

[options.entry_points]
console_scripts =
  openai = zaiwen._scripts:main



[options.packages.find]
exclude =
  tests
  tests.*